Fix Gentoo update

--- a/tasks/package-managers/portage-post.yml
+++ b/tasks/package-managers/portage-post.yml
@@ -54,3 +54,6 @@
     newuse: true
     update: true
     package: '@world'
+  register: result
+  until: result.failed == false
+  retries: "{{ system_retries }}"
