--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -26,6 +26,19 @@
   ansible.builtin.command:
     cmd: grub-mkconfig -o /boot/grub/grub.cfg
 
+- name: Restart network
+  listen:
+    - restart network service
+  become: true
+  ansible.builtin.service:
+    name: "{{ system_networks_defaults.service_name }}"
+
+- name: Skip network restart
+  listen:
+    - skip
+  ansible.builtin.debug:
+    msg: "You've to restart the network yourself !"
+
 - name: Reboot
   listen:
     - grub-mkconfig
