--- a/tasks/ca.yml
+++ b/tasks/ca.yml
@@ -1,13 +1,7 @@
 ---
 - name: CA - Load variables
-  ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
-  vars:
-    params:
-      files:
-        - "{{ ansible_os_family | lower }}-like.yml"
-        - other.yml
-      paths:
-        - vars/ca
+  when: system_ca is not defined
+  ansible.builtin.import_tasks: vars.yml
 
 - name: CA certificates
   tags:
