--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -1,16 +1,16 @@
 ---
-system_apt_default_mirror: https://deb.debian.org
 system_debian_release: "{{ 'testing' if ansible_distribution_release == 'n/a' else ansible_distribution_release }}"
+system_apt_default_mirror: https://deb.debian.org
+system_apt_default_sections:
+  - main
 system_apt_default_mirrors:
   - url: "{{ system_apt_mirror | default(system_apt_default_mirror) }}/debian"
     branches:
       - "{{ system_debian_release }}"
       - "{{ system_debian_release }}-updates"
       - "{{ system_debian_release }}-backports"
-    sections:
-      - main
+    sections: "{{ system_apt_sections | default(system_apt_default_sections) }}"
   - url: "{{ system_apt_mirror | default(system_apt_default_mirror) }}/debian-security"
     branches:
       - "{{ system_debian_release }}{{ '-security' if ansible_distribution_major_version >= '11' else '' }}/updates"
-    sections:
-      - main
+    sections: "{{ system_apt_sections | default(system_apt_default_sections) }}"
