Network management feature flipping

--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -5,7 +5,7 @@
     name: "{{ system_hosts_localhost }}"
   notify: restart logind
 
-- name: Hosts - Display system for debugging
+- name: Hosts - Display custom hosts for debugging
   ansible.builtin.debug:
     var: system_hosts
     verbosity: 1
@@ -15,7 +15,7 @@
   ansible.builtin.lineinfile:
     path: /etc/hosts
     line: "{{ '{:<15}'.format(item.ip) }} {{ item.names | join(' ') }}"
-    regexp: "^{{ item.ip }}"
+    regexp: "^{{ item.ip | regex_escape }}"
   with_items: "{{ system_hosts }}"
   notify: restart logind
 
