--- a/tasks/networks/debian-like.yml
+++ b/tasks/networks/debian-like.yml
@@ -1,5 +1,6 @@
 ---
-- name: Networks - Debian like - Interfaces source directory
+- name: Networks - Debian like - Interfaces
+  when: system_networks_interfaces_prune
   become: true
   ansible.builtin.copy:
     src: network/interfaces
