--- a/tasks/networks.yml
+++ b/tasks/networks.yml
@@ -20,3 +20,6 @@
 - name: Networks - Interfaces configuration from template
   when: system_networks_defaults.template is defined
   ansible.builtin.import_tasks: networks/from-template.yml
+
+- name: Networks - Restart to take effect
+  ansible.builtin.meta: flush_handlers
