Fix key missing

--- a/molecule/servers/converge.yml
+++ b/molecule/servers/converge.yml
@@ -1,87 +1,5 @@
 ---
 - name: Converge customization
   hosts: all
-  tasks:
-    - name: Include gwerlas.system
-      ansible.builtin.include_role:
-        name: gwerlas.system
-      vars:
-        system_sudo_group: gods
-        system_sudo_defaults:
-          - "!visiblepw"
-          - always_set_home
-          - match_group_by_gid
-          - always_query_group_plugin
-          - env_reset
-          - env_keep:
-              - COLORS
-              - DISPLAY
-              - HOSTNAME
-              - HISTSIZE
-              - KDEDIR
-              - LS_COLORS
-              - MAIL
-              - PS1
-              - PS2
-              - QTDIR
-              - USERNAME
-              - LANG
-              - LC_ADDRESS
-              - LC_CTYPE
-              - LC_COLLATE
-              - LC_IDENTIFICATION
-              - LC_MEASUREMENT
-              - LC_MESSAGES
-              - LC_MONETARY
-              - LC_NAME
-              - LC_NUMERIC
-              - LC_PAPER
-              - LC_TELEPHONE
-              - LC_TIME
-              - LC_ALL
-              - LANGUAGE
-              - LINGUAS
-              - _XKB_CHARSET
-              - XAUTHORITY
-          - secure_path: /sbin:/bin:/usr/sbin:/usr/bin
-        system_hosts_domain: mydomain.tld
-        system_hosts_localhost_aliases:
-          - me
-          - myself
-        system_hosts_custom:
-          - ip: '10.0.0.7'
-            names:
-              - host7
-              - host7.domain.tld
-        system_users_admin_group: administrators
-        system_users:
-          - name: drno
-            state: absent
-          - name: jane
-            comment: System administrator
-            group: "{{ system_users_admin_group }}"
-            groups:
-              - "{{ system_sudo_group }}"
-              - my_team
-            shell: /bin/zsh
-          - name: john
-            group: users
-          - name: my_service
-            shell: /usr/bin/nologin
-            system: true
-            state: present
-            uid: 207
-        system_users_groups:
-          - name: my_company
-          - name: villains
-            state: absent
-        system_users_keys:
-          - user: jane
-            key: ssh-rsa AAAA test
-        system_packages_custom:
-          - wget
-        system_zsh_files:
-          - .zshrc
-          - .zsh/history
-        system_ca_certificates:
-          - ca.crt
+  roles:
+    - role: gwerlas.system
