--- a/molecule/stream/molecule.yml
+++ b/molecule/stream/molecule.yml
@@ -5,6 +5,7 @@ driver:
   name: vagrant
   provider:
     name: libvirt
+  provision: true
 platforms:
   - name: archlinux
     box: archlinux/archlinux
@@ -15,6 +16,8 @@ platforms:
       - "video_type = 'virtio'"
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - 'vm.provision :shell, inline: "pacman -Syu --noconfirm git net-tools python3 sudo unzip which"'
   - name: debian12
     box: debian/testing64
     provider_raw_config_args: *raw_config
