--- a/tasks/vars.yml
+++ b/tasks/vars.yml
@@ -1,23 +1,19 @@
 ---
-- name: Packages - OS family settings
-  ansible.builtin.include_vars: "{{ ansible_os_family | lower }}-like.yml"
-
-- name: Packages - Distribution settings
+- name: Variables
   ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
   vars:
     params:
       files:
-        - "{{ ansible_distribution | lower }}.yml"
+        - "{{ file }}"
         - empty.yml
       paths:
         - vars
-
-- name: Packages - Release settings
-  ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
-  vars:
-    params:
-      files:
-        - "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}.yml"
-        - empty.yml
-      paths:
-        - vars
+  loop:
+    - "{{ ansible_os_family | lower }}-like.yml"                                          # debian-like,  redhat-like, etc.
+    - "{{ ansible_distribution | lower }}.yml"                                            # debian,       fedora,      ubuntu
+    - "{{ ansible_os_family | lower }}{{ ansible_distribution_major_version }}-like.yml"  # redhat7-like
+    - "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}.yml"    # debian10
+    - "{{ ansible_distribution | lower }}-{{ ansible_distribution_release | lower }}.yml" # ubuntu-bionic
+    - "{{ ansible_service_mgr }}.yml"                                                     # openrc
+  loop_control:
+    loop_var: file
