--- a/tasks/ca.yml
+++ b/tasks/ca.yml
@@ -1,6 +1,6 @@
 ---
 - name: CA - Load variables
-  when: system_ca is not defined
+  when: system_ca is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: CA certificates
