--- a/tasks/networks.yml
+++ b/tasks/networks.yml
@@ -1,6 +1,6 @@
 ---
 - name: Networks - Load variables
-  when: system_networks_defaults is not defined
+  when: system_networks_defaults is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Networks - Prune unmanaged interfaces
