--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Packages - Load variables
-  when: system_packages is not defined
+  when: system_packages is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Packages - Package manager preparation
