--- a/tasks/reboot.yml
+++ b/tasks/reboot.yml
@@ -1,6 +1,6 @@
 ---
 - name: Reboot - Load variables
-  when: system_reboot_detection_policy is not defined
+  when: system_reboot_detection_policy is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Reboot
