--- a/tasks/time.yml
+++ b/tasks/time.yml
@@ -1,6 +1,6 @@
 ---
 - name: Time - Load variables
-  when: time_backends is not defined
+  when: default_time_backend is undefined
   ansible.builtin.import_tasks: vars.yml
 
 - name: Time - Zone
